--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -51,7 +51,7 @@ header {
     background-color:rgba(255,255,255,0.2);
     background-blend-mode:lighten;
     background-position: center center;
-    min-height: 100vh;
+    min-height: auto;
 }
 
 h1 {
