--- a/public/css/smartphone.css
+++ b/public/css/smartphone.css
@@ -19,12 +19,12 @@
     }
 
     .main-content {
-        background-size: contain;
+        background-size: cover;
         background-image: url(../img/index_img.jpg);
         background-color:rgba(255,255,255,0.2);
         background-blend-mode:lighten;
         background-position: center center;
-        min-height: auto;
+        background-repeat: no-repeat;
     }
 
     h1 {
