--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -715,6 +715,10 @@ h4 {
     background-color: #50aef142;
 }
 
+#google-map-contents {
+    height: 30vh;
+}
+
 .errors-message {
     text-align: center;
     font-size: 10pt;
