備考欄をinputからtextareaに変更

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -717,7 +717,7 @@ h4 {
 
 .spot-details-contents {
     width: 30%;
-    margin: 200px 5% 0 0; 
+    margin: 150px 5% 0 0; 
 }
 
 .spot-details-contents td, .spot-details-contents dd {
@@ -725,6 +725,7 @@ h4 {
 }
 
 .spot-edit-button {
+    margin-top: 50px;
     margin-left: 50%;
     padding: 5px;
     border-radius: 10%;
