--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -710,9 +710,9 @@ h4 {
 }
 
 .image-contents img {
+    padding-top: 100px;
     padding-left: 30%;
-    width: 50%;
-    height: 100%;
+    height: 80%;
 }
 
 .spot-details-contents {
