--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -731,6 +731,7 @@ h4 {
     height: 500px;
     margin: 0 auto;
     margin-top: 100px;
+    margin-right: 0;
 }
 
 .image-contents img {
@@ -739,7 +740,7 @@ h4 {
 
 .spot-details-contents {
     width: 400px;
-    margin: 150px auto;
+    margin: 0 auto;
     margin-left: 0;
 }
 
