--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -742,6 +742,7 @@ h4 {
     width: 400px;
     margin: 0 auto;
     margin-left: 0;
+    padding-top: 150px;
 }
 
 .spot-details-contents td, .spot-details-contents dd {
