--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -586,6 +586,7 @@ select {
     text-align: center;
     border: solid 1px #2F4F4F;
     border-collapse: collapse;
+    padding: 10px 0;
 }
 
 .user-list-table th {
@@ -648,12 +649,15 @@ h4 {
 /*              品目登録                */
 
 .recycling-item-table {
-    margin: 30px 0 80px 28%;
+    margin: 0 auto;
+    margin-top: 30px;
+    margin-bottom: 80px;
     text-align: center;
     width: 40%;
 }
 
 .recycling-item-table, .recycling-item-table th, .recycling-item-table td {
+    padding: 10px 0;
     border: solid 1px #2F4F4F;
     border-collapse: collapse;
 }
