--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -17,5 +17,15 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
 $title-color: #367777;
 $font-color: #6b3719;
+$hokkaidou: #2aab39;
+$touhoku: #f8d939;
+$kantou: #00caff;
+$tyuubu: #2ca6e0;
+$kansai: #ff9fd4;
+$tyuugoku: #97c932;
+$shikoku: #e95711;
+$kyuusyuu: #d6e20e;
+$okinawa: #f29600;
