--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1,8 +1,14 @@
-@charset "UTF-8";
-
 body {
   margin: 0;
   min-width: 100vw;
+}
+
+a:link,
+a:visited,
+a:hover,
+a:active {
+  color: #163802;
+  text-decoration: none;
 }
 
 header {
@@ -80,6 +86,7 @@ header .main-menu .menu-button a {
     right: 1%;
     width: 30px;
     border-top: 2px solid #000;
+    transition: all 1s;
   }
 
   body header .open::before {
@@ -89,6 +96,7 @@ header .main-menu .menu-button a {
     right: 1%;
     width: 30px;
     border-top: 2px solid #000;
+    transition: all 1s;
   }
 
   body header .open .border::after {
@@ -98,14 +106,19 @@ header .main-menu .menu-button a {
     right: 1%;
     width: 30px;
     border-top: 2px solid #000;
+    transition: all 1s;
   }
 
-  body header .close::after {
-    display: none;
+  body header .open .close::after {
+    top: 45px;
+    transform: rotate(45deg);
+    border-top: 2px solid #fff;
+    -webkit-animation: lefttrans 1s;
+            animation: lefttrans 1s;
   }
 
   body header .close-button::before {
-    transform: rotate(45deg);
+    opacity: 0;
     border-top: 2px solid #fff;
   }
 
@@ -129,30 +142,9 @@ header .main-menu .menu-button a {
     width: 30vw;
     height: 100vh;
     z-index: 99;
-    right: 0;
-    -webkit-animation: SlideIn 1.6s;
-            animation: SlideIn 1.6s;
+    right: -500px;
+    transition: all 1s;
   }
-
-@-webkit-keyframes SlideIn {
-    0% {
-      transform: translateX(100%);
-    }
-
-    100% {
-      transform: translateX(0);
-    }
-}
-
-@keyframes SlideIn {
-    0% {
-      transform: translateX(100%);
-    }
-
-    100% {
-      transform: translateX(0);
-    }
-}
 
   body header nav .sp-menu .menu-button {
     padding: 0;
@@ -164,6 +156,10 @@ header .main-menu .menu-button a {
     color: #fff;
     font-size: 30px;
   }
+
+  body header nav .sp-open {
+    right: 0;
+  }
 }
 
 .footer-fixed {
@@ -173,119 +169,18 @@ header .main-menu .menu-button a {
   box-sizing: border-box;
 }
 
-.container {
-  background-size: cover;
-  background-image: url(/images/index_img.jpg?38f26cc2d8eeee13bc7365ded312ad01);
-  background-color: rgba(255, 255, 255, 0.5);
-  background-blend-mode: lighten;
-  background-position: center center;
-  min-height: 100vh;
-  -webkit-animation: fadeIn 3s ease 0.2s 1 normal;
-          animation: fadeIn 3s ease 0.2s 1 normal;
-  position: relative;
-}
-
-.container h2 {
+.footer-fixed footer {
   position: absolute;
-  top: 70px;
-  left: 10%;
-  letter-spacing: 20px;
-  font-size: 50px;
-  font-family: "Kaushan Script", cursive;
-  color: #367777;
-  text-shadow: 1px 1px 0 #fcffae, -1px 1px 0 #fcffae, 1px -1px 0 #fcffae, -1px -1px 0 #fcffae;
+  bottom: 0;
+  height: 80px;
+  min-width: 100vw;
+  color: #FFFFFF;
+  background-color: rgba(82, 161, 128, 0.7);
 }
 
-.container p {
-  position: absolute;
-  width: 40%;
-  top: 400px;
-  left: 50%;
-  font-size: 18px;
-  line-height: 3;
-  vertical-align: baseline;
-  color: #6b3719;
-}
-
-@media screen and (max-width: 768px) {
-  .container p {
-    top: 320px;
-    font-size: 13px;
-  }
-}
-
-@-webkit-keyframes fadeIn {
-  /*animation-nameで設定した値を書く*/
-  0% {
-    opacity: 0;
-  }
-
-  /*アニメーション開始時は不透明度0%*/
-  100% {
-    opacity: 1;
-  }
-
-  /*アニメーション終了時は不透明度100%*/}
-
-@keyframes fadeIn {
-  /*animation-nameで設定した値を書く*/
-  0% {
-    opacity: 0;
-  }
-
-  /*アニメーション開始時は不透明度0%*/
-  100% {
-    opacity: 1;
-  }
-
-  /*アニメーション終了時は不透明度100%*/}
-
-.search {
-  width: 90%;
-  margin: 0 auto;
-}
-
-.search .search-image {
+.footer-fixed footer .copyright {
+  margin: 0;
+  padding-top: 30px;
   text-align: center;
-  position: relative;
-}
-
-.search .search-image img {
-  min-width: 700px;
-}
-
-.search .area {
-  position: absolute;
-  width: 110px;
-  top: -90px;
-  left: 80%;
-}
-
-.search .area .ttl {
-  width: 100%;
-  font-size: 15px;
-  text-align: center;
-}
-
-.search .area .group {
-  padding: 0;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-
-.search .area .group .list {
-  padding: 0;
-}
-
-.search .area .group .list a {
-  font-size: 10px;
-}
-
-@media screen and (max-width: 768px) {
-  .search .area {
-    top: 50px;
-    right: 10%;
-  }
 }
 
