--- a/public/css/common.css
+++ b/public/css/common.css
@@ -111,7 +111,7 @@ header .main-menu .menu-button a {
 
   body header .open .close::after {
     top: 45px;
-    transform: rotate(45deg);
+    transform: rotate(405deg);
     border-top: 2px solid #fff;
     -webkit-animation: lefttrans 1s;
             animation: lefttrans 1s;
@@ -124,7 +124,7 @@ header .main-menu .menu-button a {
 
   body header .close-button::after {
     top: 45px;
-    transform: rotate(-45deg);
+    transform: rotate(-405deg);
     border-top: 2px solid #fff;
   }
 
@@ -182,5 +182,72 @@ header .main-menu .menu-button a {
   margin: 0;
   padding-top: 30px;
   text-align: center;
+}
+
+.flash-message {
+  text-align: center;
+}
+
+h2 {
+  text-align: center;
+  margin-top: 80px;
+}
+
+.form {
+  border: 1px solid #000;
+  border-radius: 10px;
+  width: 50vw;
+  margin: 0 auto;
+  padding: 50px 0;
+}
+
+.form form ul {
+  width: 800px;
+  margin: 0 auto;
+  line-height: 3;
+}
+
+.form form ul li {
+  list-style: none;
+}
+
+.form form ul li label {
+  float: left;
+  width: 200px;
+  margin-right: 10px;
+}
+
+.form form ul li input {
+  width: 400px;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid;
+}
+
+.form form .btn {
+  text-align: center;
+}
+
+.form form .btn input[type=submit] {
+  margin-top: 30px;
+  width: 200px;
+  padding: 10px 0;
+  text-align: center;
+  border-radius: 50px;
+  border: none;
+  box-shadow: inset 0 -2px 2px 0 #6c6c6c;
+}
+
+.form form .btn input[type=submit]:hover {
+  background: #52a180b3;
+  color: #fff;
+}
+
+.form form .btn span a {
+  color: #52a180b3;
+}
+
+.form form .btn span a:hover {
+  font-weight: bold;
 }
 
