--- a/public/css/index.css
+++ b/public/css/index.css
@@ -41,6 +41,18 @@
   }
 }
 
+@media screen and (max-width: 425px) {
+  .container h2 {
+    font-size: 50px;
+    letter-spacing: 2px;
+  }
+
+  .container p {
+    left: 5%;
+    width: 90%;
+  }
+}
+
 @-webkit-keyframes fadeIn {
   /*animation-nameで設定した値を書く*/
   0% {
@@ -100,6 +112,7 @@
   top: 100px;
   right: 15%;
   border-radius: 10px;
+  color: #fff;
 }
 
 .area-search .search .area .ttl {
@@ -126,6 +139,7 @@
 
 .area-search .search .area .group .list a {
   font-size: 10px;
+  color: #fff;
 }
 
 .area-search .search .hokkaidou {
@@ -193,9 +207,80 @@
 }
 
 @media screen and (max-width: 768px) {
-  .area-search .search .area {
-    top: 50px;
+  .area-search .search {
+    max-width: 700px;
+    margin-bottom: 50px;
+  }
+
+  .area-search .search .search-image img {
+    max-width: 300px;
+  }
+
+  .area-search .search .hokkaidou {
     right: 10%;
+  }
+
+  .area-search .search .touhoku {
+    top: 180px;
+    right: 10%;
+  }
+
+  .area-search .search .kantou {
+    right: 10%;
+  }
+
+  .area-search .search .okinawa {
+    top: 440px;
+    right: 10%;
+  }
+
+  .area-search .search .kansai {
+    top: 435px;
+    right: 240px;
+  }
+
+  .area-search .search .shikoku {
+    top: 460px;
+    right: 400px;
+  }
+
+  .area-search .search .tyuubu {
+    right: 350px;
+  }
+
+  .area-search .search .tyuugoku {
+    top: 280px;
+    right: 520px;
+  }
+
+  .area-search .search .kyuusyuu {
+    width: 110px;
+    top: 400px;
+    right: 600px;
+  }
+
+  .area-search .search .kyuusyuu .group .list {
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .area-search .search .search-image img {
+    display: none;
+  }
+
+  .area-search .search .area {
+    position: static;
+    width: 80vw;
+    margin: 0 auto;
+  }
+
+  .area-search .search .area .ttl {
+    padding: 10px 0;
+  }
+
+  .area-search .search .area .group {
+    padding-bottom: 10px;
   }
 }
 
