--- a/resources/sass/common.scss
+++ b/resources/sass/common.scss
@@ -108,7 +108,7 @@ header {
                 .close {
                     &::after {
                         top: 45px;
-                        transform: rotate(45deg);
+                        transform: rotate(405deg);
                         border-top: 2px solid #fff;
                         animation: lefttrans 1s;
                     }
@@ -121,7 +121,7 @@ header {
                 }
                 &::after {
                     top: 45px;
-                    transform: rotate(-45deg);
+                    transform: rotate(-405deg);
                     border-top: 2px solid #fff;
                 }
             }
@@ -177,6 +177,68 @@ header {
             margin: 0;
             padding-top: 30px;
             text-align: center;
+        }
+    }
+}
+
+.flash-message {
+    text-align: center;
+}
+
+h2 {
+    text-align: center;
+    margin-top: 80px;
+}
+
+.form {
+    border: 1px solid #000;
+    border-radius: 10px;
+    width: 50vw;
+    margin: 0 auto;
+    padding: 50px 0;
+    form {
+        ul {
+            width: 800px;
+            margin: 0 auto;
+            line-height: 3;
+            li {
+                list-style: none;
+                label {
+                    float: left;
+                    width: 200px;
+                    margin-right: 10px;
+                }
+                input {
+                    width: 400px;
+                    padding: 10px;
+                    border-radius: 5px;
+                    border: 1px solid;
+                }
+            }
+        }
+        .btn {
+            text-align: center;
+            input[type="submit"] {
+                margin-top: 30px;
+                width: 200px;
+                padding: 10px 0;
+                text-align: center;
+                border-radius: 50px;
+                border: none;
+                box-shadow: inset 0 -2px 2px 0 #6c6c6c;
+                &:hover {
+                    background: $footer;
+                    color: #fff;
+                }
+            }
+            span {
+                a {
+                    color: $footer;
+                    &:hover {
+                        font-weight: bold;
+                    }
+                }
+            }
         }
     }
 }
