--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -39,6 +39,16 @@
             font-size: 13px;
         }
     }
+    @media screen and (max-width: 425px) {
+        h2 {
+            font-size: 50px;
+            letter-spacing: 2px;
+        }
+        p {
+            left: 5%;
+            width: 90%;
+        }
+    }
 }
 
 @keyframes fadeIn { /*animation-nameで設定した値を書く*/
@@ -72,6 +82,7 @@
             top: 100px;
             right: 15%;
             border-radius: 10px;
+            color: #fff;
             .ttl {
                 width: 100%;
                 margin: 0;
@@ -91,6 +102,7 @@
                     text-align: center;
                     a {
                         font-size: 10px;
+                        color: #fff;
                     }
                 }
             }
@@ -149,11 +161,76 @@
                 width: 100%;
             }
         }
+    }
 
-        @media screen and (max-width: 768px) {
-            .area {
-                top: 50px;
+    @media screen and (max-width: 768px) {
+        .search {
+            max-width: 700px;
+            margin-bottom: 50px;
+            .search-image {
+                img {
+                    max-width: 300px;
+                }
+            }
+            .hokkaidou {
                 right: 10%;
+            }
+            .touhoku {
+                top: 180px;
+                right: 10%;
+            }
+            .kantou {
+                right: 10%;
+            }
+            .okinawa {
+                top: 440px;
+                right: 10%;
+            }
+            .kansai {
+                top: 435px;
+                right: 240px;
+            }
+            .shikoku {
+                top: 460px;
+                right: 400px;
+            }
+            .tyuubu {
+                right: 350px;
+            }
+            .tyuugoku {
+                top: 280px;
+                right: 520px;
+            }
+            .kyuusyuu {
+                width: 110px;
+                top: 400px;
+                right: 600px;
+                .group {
+                    .list {
+                        width: 50%;
+                    }
+                }
+            }
+        }
+    }
+
+    @media screen and (max-width: 425px) {
+        .search {
+            .search-image {
+                img {
+                    display: none;
+                }
+            }
+            .area {
+                position: static;
+                width: 80vw;
+                margin: 0 auto;
+                .ttl {
+                    padding: 10px 0;
+                }
+                .group {
+                    padding-bottom: 10px;
+                }
             }
         }
     }
